--- a/my-project-backend/src/main/resources/application.yml
+++ b/my-project-backend/src/main/resources/application.yml
@@ -1,1 +1,10 @@
-spring.application.name=my-project-backend
+spring:
+  security:
+    jwt:
+      key: abcdefghijklmnopqrstuvwxyz1234567890
+      expire: 7
+  datasource:
+    url: jdbc:mysql://localhost:3306/test
+    username: root
+    password: 123456
+    driver-class-name: com.mysql.cj.jdbc.Driver
