--- a/my-project-backend/src/main/resources/application.yml
+++ b/my-project-backend/src/main/resources/application.yml
@@ -23,3 +23,7 @@ spring:
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
+  minio:
+    endpoint: 'http://localhost:9000'
+    username: 'minioadmin'
+    password: 'minioadmin'
