--- a/my-project-frontend/package.json
+++ b/my-project-frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@vueup/vue-quill": "^1.2.0",
     "@vueuse/core": "^12.8.2",
     "axios": "^1.8.1",
     "element-plus": "^2.9.5",
