--- a/my-project-frontend/package.json
+++ b/my-project-frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.8.1",
     "element-plus": "^2.9.5",
     "pinia": "^3.0.1",
+    "quill-image-resize-vue": "^1.0.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
