--- a/my-project-backend/pom.xml
+++ b/my-project-backend/pom.xml
@@ -99,6 +99,11 @@
 			<artifactId>minio</artifactId>
 			<version>8.3.9</version>
 		</dependency>
+		<dependency>
+			<groupId>com.baomidou</groupId>
+			<artifactId>mybatis-plus-jsqlparser</artifactId>
+			<version>3.5.10.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
