--- a/my-project-frontend/package.json
+++ b/my-project-frontend/package.json
@@ -15,7 +15,9 @@
     "axios": "^1.8.1",
     "element-plus": "^2.9.5",
     "pinia": "^3.0.1",
+    "quill-delta-to-html": "^0.12.1",
     "quill-image-resize-vue": "^1.0.4",
+    "quill-image-super-solution-module": "^2.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
